Removed data deps between experiment creation and laoding

--- a/nbs/lake_experiment.ipynb
+++ b/nbs/lake_experiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,13 +62,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "class LakeExperiment:\n",
-    "    def __init__(self, bucket_name, experiments_dir, name, experiment_id, data):\n",
+    "    def __init__(self, bucket_name, experiments_dir, name, experiment_id, start_time, data):\n",
     "        self.bucket_name = bucket_name\n",
     "        self.experiments_dir = experiments_dir\n",
     "        self.name = name\n",
@@ -77,6 +77,7 @@
     "        self.project_dir = s3_join(self.bucket_name, self.project_name)\n",
     "        self.metrics_dir = s3_join(self.project_dir, \"metrics\", str(experiment_id))\n",
     "        self.artifacts_dir = s3_join(self.project_dir, \"artifacts\", str(experiment_id))\n",
+    "        self.start_time = start_time\n",
     "        self._data = freeze(data)\n",
     "        self.s3 = boto3.client(\"s3\")\n",
     "        self.artifacts = self._load_artifacts()\n",
@@ -137,13 +138,6 @@
     "    def _delete_artifacts(self):\n",
     "        raise NotImplementedError"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
