--- a/nbs/lake_experiment_loader.ipynb
+++ b/nbs/lake_experiment_loader.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,6 +42,7 @@
     "import os\n",
     "from functools import lru_cache\n",
     "from typing import Tuple\n",
+    "import uuid\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -50,16 +51,66 @@
     "from nbdev import Config\n",
     "from pandas.io.sql import DatabaseError\n",
     "from sciflow.experiment.lake_experiment import LakeExperiment\n",
-    "from sciflow.utils import odbc_connect, query\n",
+    "from sciflow.utils import prepare_env, odbc_connect, query\n",
+    "from sciflow.s3_utils import delete_dir\n",
     "from tinydb import Query, TinyDB\n",
     "from tinydb.storages import MemoryStorage\n",
+    "import boto3\n",
     "\n",
     "MAX_CACHE_SIZE = 32"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Setup"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment_name = \"lake_experiment_loader\"\n",
+    "project = 'sciflow'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prepare_env()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "object NoneType can't be used in 'await' expression",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-28-cdd13594686d>\u001b[0m in \u001b[0;36masync-def-wrapper\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: object NoneType can't be used in 'await' expression"
+     ]
+    }
+   ],
+   "source": [
+    "s3 = boto3.resource(\"s3\")\n",
+    "delete_dir(s3, os.environ[\"SCIFLOW_BUCKET\"], f\"sciflow/experiments/{experiment_name}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,18 +153,22 @@
     "        self,\n",
     "        experiment_name=None,\n",
     "        experiment_ids=None,\n",
-    "        experiment_id: int = None,\n",
+    "        experiment_id: str = None,\n",
     "        order_by: str = None,\n",
     "        limit: int = None,\n",
     "    ) -> Experiment:\n",
     "        if experiment_name is None:\n",
     "            experiment_name = self.experiment_name\n",
-    "        query_stmt = f\"select * from {self.table_context}.{experiment_name}.runs\"\n",
+    "        table_name = f\"{self.table_context}.{experiment_name}.runs\"\n",
+    "        # TODO Dremio Specific code in utils.py\n",
+    "        data = query(self.connection, f'ALTER TABLE {table_name} REFRESH METADATA')\n",
+    "        \n",
+    "        query_stmt = f\"select * from {table_name}\"\n",
     "        if experiment_ids:\n",
     "            ids = \", \".join([str(i) for i in experiment_ids])\n",
-    "            query_stmt += f\" where dir0 IN ({ids})\"\n",
+    "            query_stmt += f\" where dir0 IN {tuple('{}'.format(x) for x in experiment_ids)}\"\n",
     "        if experiment_id:\n",
-    "            query_stmt += f\" where dir0 = {experiment_id}\"\n",
+    "            query_stmt += f\" where dir0 = '{experiment_id}'\"\n",
     "        if order_by:\n",
     "            query_stmt += f\" order by {order_by} desc\"\n",
     "        if limit:\n",
@@ -125,6 +180,7 @@
     "                self.experiments_key_prefix,\n",
     "                experiment_name,\n",
     "                ex_id,\n",
+    "                data.iloc[i, :].to_dict()['start_time'],\n",
     "                data.iloc[i, :].to_dict(),\n",
     "            )\n",
     "            for i, ex_id in enumerate(data.dir0.tolist())\n",
@@ -137,14 +193,14 @@
     "        return None if len(experiments) == 0 else experiments[0]\n",
     "\n",
     "    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
-    "    def find_by_ids(self, experiment_ids: Tuple[int]):\n",
+    "    def find_by_ids(self, experiment_ids: Tuple[str]):\n",
     "        if len(experiment_ids) == 1:\n",
     "            raise ValueError(\"Use find_by_id for a single experiment\")\n",
     "        return self._find(experiment_ids=experiment_ids)\n",
     "\n",
     "    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
     "    def find_latest(self, n=5):\n",
-    "        return self._find(order_by=\"dir0\", limit=n)\n",
+    "        return self._find(order_by = 'start_time', limit=n)\n",
     "\n",
     "    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
     "    def find_all(self):\n",
@@ -201,47 +257,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bucket_name = \"s3bawspprwe1chatbotunpub01\"  # default = bucket\n",
-    "bucket_table_alias = \"chatbot_unpublish_s3\"\n",
-    "experiments_key_prefix = \"discovery/experiments/test\"  # default = lib_name/experiments\n",
-    "experiment_name = \"lake_observer\"  # default should be flow name\n",
-    "lib_name = Config().lib_name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "loader = LakeExpLoader(\n",
-    "    project=lib_name,\n",
-    "    experiment_name=experiment_name,\n",
-    "    experiments_key_prefix=experiments_key_prefix,\n",
-    "    bucket_name=bucket_name,\n",
-    "    bucket_table_alias=bucket_table_alias,\n",
+    "    project=project,\n",
+    "    experiment_name=experiment_name\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Project: sciflow\n",
-       "Experiment: lake_observer\n",
-       "Remote Path: s3bawspprwe1chatbotunpub01/discovery/experiments/test/lake_observer\n",
-       "Lake Table: chatbot_unpublish_s3.discovery.experiments.test.lake_observer"
+       "Experiment: lake_experiment_loader\n",
+       "Remote Path: pprsandboxpdlras3/sciflow/experiments/lake_experiment_loader\n",
+       "Lake Table: ra_s3.sciflow.experiments.lake_experiment_loader"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,45 +292,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "assert (\n",
     "    loader.remote_path\n",
-    "    == \"s3bawspprwe1chatbotunpub01/discovery/experiments/test/lake_observer\"\n",
+    "    == f\"{os.environ['SCIFLOW_BUCKET']}/{project}/experiments/{experiment_name}\"\n",
     ")\n",
     "assert (\n",
-    "    loader.lake_table == \"chatbot_unpublish_s3.discovery.experiments.test.lake_observer\"\n",
+    "    loader.lake_table == f\"{os.environ['SCIFLOW_BUCKET_TABLE_ALIAS']}.{project}.experiments.{experiment_name}\"\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "missing_loader = LakeExpLoader(\n",
-    "    lib_name, f\"generated_experiment_name_{np.random.randint(10**5)}\"\n",
+    "    project, f\"generated_experiment_name_{np.random.randint(10**5)}\"\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Project: sciflow\n",
-       "Experiment: generated_experiment_name_61662\n",
-       "Remote Path: pprsandboxpdlras3/sciflow/experiments/generated_experiment_name_61662\n",
-       "Lake Table: ra_s3.sciflow.experiments.generated_experiment_name_61662"
+       "Experiment: generated_experiment_name_96738\n",
+       "Remote Path: pprsandboxpdlras3/sciflow/experiments/generated_experiment_name_96738\n",
+       "Lake Table: ra_s3.sciflow.experiments.generated_experiment_name_96738"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,8 +340,108 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create Test Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setup Experiments\n",
+    "from sacred import Experiment\n",
+    "from sacred.run import Run\n",
+    "from sciflow.experiment.lake_observer import AWSLakeObserver\n",
+    "\n",
+    "ex = Experiment(experiment_name, interactive=True)\n",
+    "\n",
+    "obs = AWSLakeObserver(\n",
+    "    project,\n",
+    "    experiment_name=experiment_name,\n",
+    "    bucket_name=os.environ[\"SCIFLOW_BUCKET\"]\n",
+    ")\n",
+    "\n",
+    "ex.observers.append(obs)\n",
+    "\n",
+    "\n",
+    "@ex.config\n",
+    "def my_config():\n",
+    "    recipient = \"test\"\n",
+    "    message = f\"Hello {recipient}!\"\n",
+    "    f\"{message}\"\n",
+    "\n",
+    "\n",
+    "@ex.main\n",
+    "def my_main(message, _run: Run):\n",
+    "    _run.add_artifact(\"test/requirements-generated.txt\")\n",
+    "    _run.add_artifact(\"test/dataframe_artifact.csv\")\n",
+    "    _run.log_scalar(\"another one\", 9.12, 0)\n",
+    "    print(message)\n",
+    "    \n",
+    "sample_id_1 = str(uuid.uuid4()).replace(\"-\", \"_\")\n",
+    "sample_id_2 = str(uuid.uuid4()).replace(\"-\", \"_\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO - lake_experiment_loader - Running command 'my_main'\n",
+      "INFO - lake_experiment_loader - Started\n",
+      "INFO - lake_experiment_loader - Completed after 0:00:01\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello test!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO - lake_experiment_loader - Running command 'my_main'\n",
+      "INFO - lake_experiment_loader - Started\n",
+      "INFO - lake_experiment_loader - Completed after 0:00:01\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello test!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<sacred.run.Run at 0x7f71cde83bd0>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ex.run(meta_info={\"run_id\": sample_id_1})\n",
+    "ex.run(meta_info={\"run_id\": sample_id_2})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,12 +454,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ex1 = loader.find_by_id(1)\n",
-    "assert len(ex1.metrics) == 2\n",
+    "assert loader.find_by_id(1) is None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ex1 = loader.find_by_id(sample_id_1)\n",
+    "assert len(ex1.metrics) == 1\n",
+    "assert ex1.metrics['values'].iloc[0] == 9.12\n",
     "assert type(ex1.metrics) == pd.DataFrame\n",
     "assert len(ex1.artifacts.values()) == 2\n",
     "assert all([type(art) == CSVArtifact for art in ex1.artifacts.values()])"
@@ -327,87 +477,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
-    "    ex_ids = (1,)\n",
+    "    ex_ids = (sample_id_1,)\n",
     "    exs = loader.find_by_ids(ex_ids)\n",
     "except ValueError:\n",
     "    pass\n",
-    "ex_ids = (1, 3)\n",
+    "ex_ids = (sample_id_1, sample_id_2)\n",
     "assert len(loader.find_by_ids(ex_ids)) == 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert [int(ex.experiment_id) for ex in loader.find_latest()] == [5, 4, 3, 2, 1]\n",
-    "assert [int(ex.experiment_id) for ex in loader.find_latest(n=2)] == [5, 4]"
+    "assert [ex.experiment_id for ex in loader.find_latest()] == [sample_id_2, sample_id_1]\n",
+    "assert [ex.experiment_id for ex in loader.find_latest(n=1)] == [sample_id_2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert len(loader.find_all()) == 5\n",
-    "assert sorted([int(ex.experiment_id) for ex in loader.find_all()]) == [1, 2, 3, 4, 5]"
+    "assert len(loader.find_all()) == 2\n",
+    "assert [ex.experiment_id for ex in loader.find_all()] == [sample_id_2, sample_id_1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
-      "Wall time: 9.06 µs\n"
-     ]
-    }
-   ],
-   "source": [
-    "%time assert len(loader.find_all()) == 5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "loader.cache_clear()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 252 ms, sys: 8 ms, total: 260 ms\n",
-      "Wall time: 1.29 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%time assert len(loader.find_all()) == 5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -427,30 +532,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert len(loader.find_by_name(\"lake_observer\")) == 5"
+    "assert len(loader.find_by_name(experiment_name)) == 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert len(loader.find_by_config_key(\"recipient\", \"test\")) == 5\n",
+    "assert len(loader.find_by_config_key(\"recipient\", \"test\")) == 2\n",
     "assert loader.find_by_config_key(\"recipient\", \"hello\") is None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert len(loader.find_by_key(\"experiment\", \"name\", \"test-lake-obs\")) == 5\n",
+    "assert len(loader.find_by_key(\"experiment\", \"name\", \"lake_experiment_loader\")) == 2\n",
     "assert loader.find_by_key(\"experiment\", \"mainfile\", \"extest.py\") is None"
    ]
   }
