--- a/nbs/lake_observer.ipynb
+++ b/nbs/lake_observer.ipynb
@@ -55,7 +55,8 @@
     "    list_s3_subdirs,\n",
     "    objects_exist_in_dir,\n",
     "    s3_join,\n",
-    ")"
+    ")\n",
+    "from sciflow.utils import prepare_env"
    ]
   },
   {
@@ -209,7 +210,7 @@
     "        for dir_to_check in self.dirs:\n",
     "            if objects_exist_in_dir(self.s3, self.bucket_name, dir_to_check):\n",
     "                raise FileExistsError(\n",
-    "                    \"S3 dir at {}/{} already exists\".format(\n",
+    "                    \"S3 dir at {}/{} already exists; check your run_id is unique\".format(\n",
     "                        self.bucket_name, dir_to_check\n",
     "                    )\n",
     "                )\n",
@@ -329,8 +330,8 @@
    "outputs": [],
    "source": [
     "project = \"sciflow\"\n",
-    "experiment_name = \"observer_test\"\n",
-    "experiments_key_prefix = \"experiments/test/\"\n",
+    "experiment_name = \"lake_observer\"\n",
+    "experiments_key_prefix = \"sciflow/experiments\"\n",
     "missing_bucket = \"s3awsmissing\"\n",
     "invalid_bucket = \"some bucket\""
    ]
@@ -377,6 +378,13 @@
     "    )\n",
     "except ValueError as ve:\n",
     "    assert \"naming\" in str(ve).lower()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test Run Expeirments"
    ]
   },
   {
@@ -436,7 +444,7 @@
      "text": [
       "INFO - test_lake_obs - Running command 'my_main'\n",
       "INFO - test_lake_obs - Started\n",
-      "INFO - test_lake_obs - Completed after 0:00:00\n"
+      "INFO - test_lake_obs - Completed after 0:00:01\n"
      ]
     },
     {
@@ -449,7 +457,7 @@
     {
      "data": {
       "text/plain": [
-       "<sacred.run.Run at 0x7f5410e8ab50>"
+       "<sacred.run.Run at 0x7f860bf33f10>"
       ]
      },
      "execution_count": 11,
@@ -462,6 +470,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Check they were created correctly"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -470,23 +485,30 @@
     "assert objects_exist_in_dir(\n",
     "    boto3.resource(\"s3\"),\n",
     "    os.environ[\"SCIFLOW_BUCKET\"],\n",
-    "    f\"{experiments_key_prefix}test_lake_obs/artifacts/{sample_id}/requirements-generated.txt\",\n",
+    "    f\"{experiments_key_prefix}/test_lake_obs/artifacts/{sample_id}/requirements-generated.txt\",\n",
     ")\n",
     "assert objects_exist_in_dir(\n",
     "    boto3.resource(\"s3\"),\n",
     "    os.environ[\"SCIFLOW_BUCKET\"],\n",
-    "    f\"{experiments_key_prefix}test_lake_obs/artifacts/{sample_id}/dataframe_artifact.csv\",\n",
+    "    f\"{experiments_key_prefix}/test_lake_obs/artifacts/{sample_id}/dataframe_artifact.csv\",\n",
     ")\n",
     "assert objects_exist_in_dir(\n",
     "    boto3.resource(\"s3\"),\n",
     "    os.environ[\"SCIFLOW_BUCKET\"],\n",
-    "    f\"{experiments_key_prefix}test_lake_obs/metrics/{sample_id}/metrics.csv\",\n",
+    "    f\"{experiments_key_prefix}/test_lake_obs/metrics/{sample_id}/metrics.csv\",\n",
     ")\n",
     "assert objects_exist_in_dir(\n",
     "    boto3.resource(\"s3\"),\n",
     "    os.environ[\"SCIFLOW_BUCKET\"],\n",
-    "    f\"{experiments_key_prefix}test_lake_obs/runs/{sample_id}/run.json\",\n",
+    "    f\"{experiments_key_prefix}/test_lake_obs/runs/{sample_id}/run.json\",\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Clean up test resources"
    ]
   },
   {
@@ -495,10 +517,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sciflow.s3_utils import delete_dir\n",
-    "\n",
     "s3 = boto3.resource(\"s3\")\n",
-    "delete_dir(s3, os.environ[\"SCIFLOW_BUCKET\"], f\"{experiments_key_prefix}test_lake_obs\")"
+    "delete_dir(s3, os.environ[\"SCIFLOW_BUCKET\"], f\"{experiments_key_prefix}/test_lake_obs\")"
    ]
   }
  ],
