--- a/nbs/lake_experiment_loader.ipynb
+++ b/nbs/lake_experiment_loader.ipynb
@@ -505,7 +505,7 @@
    "outputs": [],
    "source": [
     "assert len(loader.find_all()) == 2\n",
-    "assert [ex.experiment_id for ex in loader.find_all()] == [sample_id_2, sample_id_1]"
+    "assert sorted([ex.experiment_id for ex in loader.find_all()]) == sorted([sample_id_2, sample_id_1])"
    ]
   },
   {
@@ -563,6 +563,18 @@
    "display_name": "Python [conda env:sciflow]",
    "language": "python",
    "name": "conda-env-sciflow-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
