Added flows dir to gitignore

--- a/nbs/lake_experiment_loader.ipynb
+++ b/nbs/lake_experiment_loader.ipynb
@@ -505,7 +505,9 @@
    "outputs": [],
    "source": [
     "assert len(loader.find_all()) == 2\n",
-    "assert sorted([ex.experiment_id for ex in loader.find_all()]) == sorted([sample_id_2, sample_id_1])"
+    "assert sorted([ex.experiment_id for ex in loader.find_all()]) == sorted(\n",
+    "    [sample_id_2, sample_id_1]\n",
+    ")"
    ]
   },
   {
