--- a/nbs/test/test_data_handling.ipynb
+++ b/nbs/test/test_data_handling.ipynb
@@ -71,27 +71,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "int_param: 3\n",
-      "float_param: 1.1\n",
-      "str_param: Sciflow 🔬\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(3, 1.1, 'Sciflow 🔬')"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "scalar(int_param, float_param, str_param)"
    ]
@@ -115,17 +95,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "input_path: /home/jovyan/git/sciflow/nbs/test\n",
-      "input_path: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-      "input_path: {'a': {'b': {'c': 'abc'}}, 'another_key': [1, 2, 3]}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "py_advanced(input_path, list_param, dict_param)"
    ]
@@ -148,16 +118,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "series: (10000000,)\n",
-      "df: (10000000, 4)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pandas(series_param, df_param)"
    ]
@@ -165,9 +126,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:jovyan-discovery]",
+   "display_name": "Python [conda env:sciflow]",
    "language": "python",
-   "name": "conda-env-jovyan-discovery-py"
+   "name": "conda-env-sciflow-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
