--- a/nbs/utils.ipynb
+++ b/nbs/utils.ipynb
@@ -32,7 +32,7 @@
     "import pandas as pd\n",
     "import pyodbc\n",
     "from fastcore.script import call_parse\n",
-    "from nbdev.clean import nbdev_clean_nbs\n",
+    "from nbdev.clean import nbdev_clean_nbs, rm_execution_count\n",
     "from nbqa.find_root import find_project_root"
    ]
   },
@@ -95,9 +95,31 @@
     "# export\n",
     "\n",
     "\n",
+    "def _clean_cell(cell, clear_all=False, clear_output=True):\n",
+    "    \"Clean `cell` by removing superfluous metadata or everything except the input if `clear_all`\"\n",
+    "    rm_execution_count(cell)\n",
+    "    if 'outputs' in cell:\n",
+    "        if clear_all or clear_output: \n",
+    "            cell['outputs'] = []\n",
+    "        else:         \n",
+    "            clean_cell_output(cell)\n",
+    "    if cell['source'] == ['']: \n",
+    "        cell['source'] = []\n",
+    "    cell['metadata'] = {} if clear_all else {k:v for k,v in cell['metadata'].items() if k in cell_metadata_keep}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
     "@call_parse\n",
     "def sciflow_clean():\n",
     "    nbdev.clean.cell_metadata_keep = nbdev.clean.cell_metadata_keep + [\"tags\"]\n",
+    "    nbdev.clean.clean_cell = _clean_cell\n",
     "    nbdev_clean_nbs()"
    ]
   },
@@ -202,16 +224,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 16 ms, sys: 8 ms, total: 24 ms\n",
-      "Wall time: 308 ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "\n",
@@ -222,28 +235,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
-      "Wall time: 127 ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "assert type(conn) == pyodbc.Connection\n",
     "assert query(conn, \"SELECT 1 AS test_col\")[\"test_col\"].iloc[0] == 1"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -251,6 +248,18 @@
    "display_name": "Python [conda env:sciflow]",
    "language": "python",
    "name": "conda-env-sciflow-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
