Formatting changes - black

--- a/nbs/utils.ipynb
+++ b/nbs/utils.ipynb
@@ -98,14 +98,18 @@
     "def _clean_cell(cell, clear_all=False, clear_output=True):\n",
     "    \"Clean `cell` by removing superfluous metadata or everything except the input if `clear_all`\"\n",
     "    rm_execution_count(cell)\n",
-    "    if 'outputs' in cell:\n",
-    "        if clear_all or clear_output: \n",
-    "            cell['outputs'] = []\n",
-    "        else:         \n",
+    "    if \"outputs\" in cell:\n",
+    "        if clear_all or clear_output:\n",
+    "            cell[\"outputs\"] = []\n",
+    "        else:\n",
     "            clean_cell_output(cell)\n",
-    "    if cell['source'] == ['']: \n",
-    "        cell['source'] = []\n",
-    "    cell['metadata'] = {} if clear_all else {k:v for k,v in cell['metadata'].items() if k in cell_metadata_keep}"
+    "    if cell[\"source\"] == [\"\"]:\n",
+    "        cell[\"source\"] = []\n",
+    "    cell[\"metadata\"] = (\n",
+    "        {}\n",
+    "        if clear_all\n",
+    "        else {k: v for k, v in cell[\"metadata\"].items() if k in cell_metadata_keep}\n",
+    "    )"
    ]
   },
   {
@@ -115,6 +119,7 @@
    "outputs": [],
    "source": [
     "# export\n",
+    "\n",
     "\n",
     "@call_parse\n",
     "def sciflow_clean():\n",
