--- a/nbs/clean.ipynb
+++ b/nbs/clean.ipynb
@@ -23,8 +23,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from nbdev.clean import rm_execution_count\n",
-    "from fastcore.script import call_parse, Param, bool_arg"
+    "from fastcore.script import Param, bool_arg, call_parse\n",
+    "from nbdev.clean import rm_execution_count"
    ]
   },
   {
@@ -60,34 +60,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "# export\n",
     "@call_parse\n",
-    "def sciflow_clean_nbs(fname:Param(\"A notebook name or glob to convert\", str)=None,\n",
-    "                    clear_all:Param(\"Clean all metadata and outputs\", bool_arg)=False,\n",
-    "                    disp:Param(\"Print the cleaned outputs\", bool_arg)=False,\n",
-    "                    read_input_stream:Param(\"Read input stram and not nb folder\")=False):\n",
+    "def sciflow_clean_nbs(\n",
+    "    fname: Param(\"A notebook name or glob to convert\", str) = None,\n",
+    "    clear_all: Param(\"Clean all metadata and outputs\", bool_arg) = False,\n",
+    "    disp: Param(\"Print the cleaned outputs\", bool_arg) = False,\n",
+    "    read_input_stream: Param(\"Read input stram and not nb folder\") = False,\n",
+    "):\n",
     "    \"Clean all notebooks in `fname` to avoid merge conflicts\"\n",
-    "    #Git hooks will pass the notebooks in the stdin\n",
+    "    # Git hooks will pass the notebooks in the stdin\n",
     "    if read_input_stream and sys.stdin:\n",
-    "        input_stream = io.TextIOWrapper(sys.stdin.buffer, encoding='utf-8')\n",
+    "        input_stream = io.TextIOWrapper(sys.stdin.buffer, encoding=\"utf-8\")\n",
     "        nb = json.load(input_stream)\n",
     "        clean_nb(nb, clear_all=clear_all)\n",
     "        _print_output(nb)\n",
     "        return\n",
     "    path = None\n",
     "    if fname is None:\n",
-    "        try: path = get_config().path(\"nbs_path\")\n",
-    "        except Exception as e: path = Path.cwd()\n",
-    "    \n",
-    "    files = nbglob(fname=ifnone(fname,path))\n",
+    "        try:\n",
+    "            path = get_config().path(\"nbs_path\")\n",
+    "        except Exception:\n",
+    "            path = Path.cwd()\n",
+    "\n",
+    "    files = nbglob(fname=ifnone(fname, path))\n",
     "    for f in files:\n",
-    "        if not str(f).endswith('.ipynb'): continue\n",
-    "        nb = json.loads(open(f, 'r', encoding='utf-8').read())\n",
+    "        if not str(f).endswith(\".ipynb\"):\n",
+    "            continue\n",
+    "        nb = json.loads(open(f, \"r\", encoding=\"utf-8\").read())\n",
     "        clean_nb(nb, clear_all=clear_all)\n",
-    "        if disp: _print_output(nb)\n",
+    "        if disp:\n",
+    "            _print_output(nb)\n",
     "        else:\n",
     "            x = json.dumps(nb, sort_keys=True, indent=1, ensure_ascii=False)\n",
-    "            with io.open(f, 'w', encoding='utf-8') as f:\n",
+    "            with io.open(f, \"w\", encoding=\"utf-8\") as f:\n",
     "                f.write(x)\n",
     "                f.write(\"\\n\")"
    ]
