Added back docs

--- a/nbs/clean.ipynb
+++ b/nbs/clean.ipynb
@@ -23,6 +23,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
+    "\n",
     "from fastcore.script import Param, bool_arg, call_parse\n",
     "from nbdev.clean import rm_execution_count"
    ]
@@ -61,7 +63,8 @@
    "outputs": [],
    "source": [
     "# export\n",
-    "@call_parse\n",
+    "\n",
+    "\n",
     "def sciflow_clean_nbs(\n",
     "    fname: Param(\"A notebook name or glob to convert\", str) = None,\n",
     "    clear_all: Param(\"Clean all metadata and outputs\", bool_arg) = False,\n",
