--- a/nbs/export_named.ipynb
+++ b/nbs/export_named.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
     "import nbformat\n",
     "from fastcore.script import call_parse\n",
     "from nbdev.export import (\n",
-    "    Config,\n",
+    "    get_config,\n",
     "    _add2all,\n",
     "    _deal_import,\n",
     "    _from_future_import,\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,10 +236,10 @@
     "\n",
     "def _sciflow_notebook2script(fname, modules, silent=False, to_dict=None, bare=False):\n",
     "    \"Finds cells starting with `#export` and puts them into a module created by `create_mod_files`\"\n",
-    "    bare = str(Config().get(\"bare\", bare)) == \"True\"\n",
+    "    bare = str(get_config().get('bare', bare)) == 'True'\n",
     "    if os.environ.get(\"IN_TEST\", 0):\n",
     "        return  # don't export if running tests\n",
-    "    sep = \"\\n\" * (int(Config().get(\"cell_spacing\", \"1\")) + 1)\n",
+    "    sep = \"\\n\" * (int(get_config().get(\"cell_spacing\", \"1\")) + 1)\n",
     "    fname = Path(fname)\n",
     "    nb = read_nb(fname)\n",
     "    default = find_default_export(nb[\"cells\"])\n",
@@ -255,7 +255,7 @@
     "            print(\n",
     "                f'Warning: Exporting to \"{e}.py\" but this module is not part of this build'\n",
     "            )\n",
-    "        fname_out = Config().path(\"lib_path\") / f\"{e}.py\"\n",
+    "        fname_out = get_config().path(\"lib_path\") / f\"{e}.py\"\n",
     "        orig = set_orig_value(fname, c, a, e, default)\n",
     "        flag_lines, code_lines = split_flags_and_code(c)\n",
     "        code_lines = _deal_import(code_lines, fname_out)\n",
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,15 +299,27 @@
     "@call_parse\n",
     "def sciflow_build_lib():\n",
     "    nbdev.export._notebook2script = _sciflow_notebook2script\n",
-    "    notebook2script(recursive=True)"
+    "    notebook2script()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:jovyan-discovery]",
+   "display_name": "Python [conda env:sciflow]",
    "language": "python",
-   "name": "conda-env-jovyan-discovery-py"
+   "name": "conda-env-sciflow-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
