--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -66,9 +66,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How to use\n",
+    "# Components\n",
     "\n",
-    "..."
+    "* Ensure notebooks meet style standards (`nbqa`)\n",
+    "* Create workflow from notebook steps (`ndbev`)\n",
+    "* Experiment tracking (`sacred/incense`)"
    ]
   },
   {
@@ -110,6 +112,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## How to use\n",
+    "\n",
+    "..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Commands\n",
     "       \n",
     "* nbdev_diff_nbs                   \n",
@@ -139,6 +150,18 @@
    "display_name": "Python [conda env:sciflow]",
    "language": "python",
    "name": "conda-env-sciflow-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
