--- a/nbs/parse_module.ipynb
+++ b/nbs/parse_module.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "# export\n",
     "\n",
-    "\n",
+    "import numpy as np\n",
     "import ast\n",
     "import os\n",
     "import re\n",
@@ -38,11 +38,7 @@
     "# export\n",
     "\n",
     "\n",
-    "def extract_step_code(\n",
-    "    module_path: Path,\n",
-    "    export_comments=(\"# cell\", \"# internal cell\", \"# comes from\"),\n",
-    "    remove_comment_lines=True,\n",
-    "):\n",
+    "def extract_step_code(module_path: Path,export_comments=(\"# cell\", \"# internal cell\", \"# comes from\"),remove_comment_lines=True,):\n",
     "    with open(module_path, \"r\") as module_file:\n",
     "        lines = module_file.readlines()\n",
     "    lines = pd.Series(lines)\n",
@@ -368,6 +364,18 @@
    "display_name": "Python [conda env:sciflow]",
    "language": "python",
    "name": "conda-env-sciflow-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
