Updated test ratio tests. Moved nb loading to utils

--- a/nbs/clean.ipynb
+++ b/nbs/clean.ipynb
@@ -19,14 +19,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
     "from fastcore.script import Param, bool_arg, call_parse\n",
-    "from nbdev.clean import rm_execution_count"
+    "from fastcore.utils import ifnone\n",
+    "from nbdev.clean import rm_execution_count\n",
+    "from nbdev.export import nbglob\n",
+    "from pathlib import Path"
    ]
   },
   {
