--- a/nbs/test_ratio.ipynb
+++ b/nbs/test_ratio.ipynb
@@ -13,73 +13,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb = read_nb('test/test_clustering.ipynb')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ep = NoExportPreprocessor([], timeout=600, kernel_name='python3')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pnb = nbformat.from_dict(nb)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 165,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class_test_code = \"\"\"\n",
     "# export\n",
     "\n",
+    "from collections import Counter\n",
+    "import ast\n",
+    "import nbformat\n",
     "\n",
-    "class Topics:\n",
-    "    def __init__(self, documents, workers, speed):\n",
-    "        pass\n",
-    "\n",
-    "    def get_num_topics(self):\n",
-    "        return 6\n",
-    "\n",
-    "    def get_topic_sizes(self):\n",
-    "        return [1, 2, 3, 4, 5, 6], [1, 2, 3, 4, 5, 6]\n",
-    "\n",
-    "    def get_topics(self, num_topics):\n",
-    "        return (\n",
-    "            [\"cat\", \"sat\", \"mat\", \"mouse\", \"house\", \"grouse\"],\n",
-    "            np.asarray([1, 1, 1, 1, 1, 1]),\n",
-    "            [1, 2, 3, 4, 5, 6],\n",
-    "        )\n",
-    "\n",
-    "    def search_documents_by_topic(self, topic_num, num_docs):\n",
-    "        return (\n",
-    "            [\"cat\", \"sat\", \"mat\", \"mouse\", \"house\", \"grouse\"],\n",
-    "            np.asarray([1, 1, 1, 1, 1, 1]),\n",
-    "            [1, 2, 3, 4, 5, 6],\n",
-    "        )\n",
-    "\n",
-    "    def generate_topic_wordcloud(self, topic_num):\n",
-    "        print(\"wordcloud\")\n",
-    "\n",
-    "def hierarchical_topic_reduction(num_topics):\n",
-    "    return [\"cat\", \"sat\", \"mat\"]\n",
-    "    \n",
-    "hierarchical_topic_reduction(7)\n",
-    "\"\"\""
+    "from nbdev.export import read_nb\n",
+    "from sciflow.utils import load_nb_module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -93,60 +57,36 @@
     "* Test ($\\tau$) = call of exported function outside `# export` block\n",
     "\n",
     "## Metrics\n",
-    "* Tests per Function: $\\mathrm{TpF}$ = $\\dfrac{|\\tau|}{f}$,when $f=0; \\mathrm{TpF} = 0$\n",
-    "* In-function Percentage: $\\mathrm{IP} = $\\# $\\mathrm{lines-in-function}:$ \\# $\\mathrm{all-code-lines}$ \n",
-    "* Code to MD Ratio: $\\mathrm{CMR}$ = # $\\mathrm{code-cells}:$ \\# $ \\mathrm{markdown-cells}$\n",
-    "* Total lines: \\# $\\mathrm{all-code-lines}$ "
+    "1. Tests per Function: $\\mathrm{TpF}$ = $\\dfrac{|\\tau|}{f}$,when $f=0; \\mathrm{TpF} = 0$\n",
+    "2. In-function Percentage: $\\mathrm{IP} = $\\# $\\mathrm{statements-in-function}:$ \\# $\\mathrm{all-statements}$ \n",
+    "3. MD to Code Ratio: $\\mathrm{CMR}$ = # $ \\mathrm{markdown-cells}:$ \\# $\\mathrm{code-cells}$ \n",
+    "4. Total Code Lines: $\\mathrm{TCL}$ = \\# $\\mathrm{all-code-lines}$ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. Tests-per-Function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
-    "md_cells = [c for c in pnb.cells if c['cell_type'] == 'markdown']"
+    "def get_function_defs(code):\n",
+    "    func_names = []\n",
+    "    for stmt in ast.walk(ast.parse(code)):\n",
+    "        if isinstance(stmt, ast.FunctionDef) and not stmt.name.startswith('_'):\n",
+    "            func_names.append(stmt.name)\n",
+    "    return func_names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num_md_cells = len(md_cells)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "code_cells = [c for c in pnb.cells if c['cell_type'] == 'code']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num_code_cells = len(code_cells)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 166,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cmr = num_code_cells/num_md_cells"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,108 +131,435 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_module = os.path.join(get_config().path(\"lib_path\"), \"test\", \"test_clustering.py\")\n",
-    "with open(test_module, \"r\") as module_file:\n",
-    "    lines = module_file.readlines()\n",
-    "test_module_code = '\\n'.join(lines)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 223,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_function_defs(code):\n",
-    "    func_names = []\n",
-    "    for stmt in ast.walk(ast.parse(code)):\n",
-    "        if isinstance(stmt, ast.FunctionDef) and not stmt.name.startswith('_'):\n",
-    "            func_names.append(stmt.name)\n",
-    "    return func_names"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 226,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "func_defs = get_function_defs('\\n'.join(lines))\n",
-    "func_calls = count_func_calls(test_module_code, func_defs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 230,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num_funcs = len(func_calls.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 233,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num_tests = sum(func_calls.values())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 238,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def tpf(num_tests, num_funcs):\n",
+    "def calc_tpf(num_tests, num_funcs):\n",
     "    return 0 if num_funcs == 0 else num_tests/num_funcs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert calc_tpf(1,1) == 1\n",
+    "assert calc_tpf(2,1) == 2\n",
+    "assert calc_tpf(1,2) == 0.5\n",
+    "assert calc_tpf(0,1) == 0\n",
+    "assert calc_tpf(1,0) == 0\n",
+    "assert calc_tpf(10,1) == 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tpf(nb_path):\n",
+    "    nb, module_code = load_nb_module(nb_path)\n",
+    "    pnb = nbformat.from_dict(nb)\n",
+    "    nb_cell_code = '\\n'.join([c['source'].replace('%', '#') for c in pnb.cells if c['cell_type'] == 'code'])\n",
+    "    func_defs = get_function_defs(module_code)\n",
+    "    func_calls = count_func_calls(nb_cell_code, func_defs)\n",
+    "    num_funcs = len(func_calls.keys())\n",
+    "    num_tests = sum(func_calls.values())\n",
+    "    print(num_tests, num_funcs)\n",
+    "    return calc_tpf(num_tests, num_funcs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "True"
+       "0.0"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "assert tpf(1,1) == 1\n",
-    "assert tpf(2,1) == 2\n",
-    "assert tpf(1,2) == 0.5\n",
-    "assert tpf(0,1) == 0\n",
-    "assert tpf(1,0) == 0\n",
-    "assert tpf(10,1) == 10"
+    "tpf(\"test/test_module.ipynb\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.4"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tpf(\"test/test_export.ipynb\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tpf(\"test/test_data_handling.ipynb\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TODO\n",
-    "\n",
-    "* HJandle tags"
+    "# 2. In-function Percentage"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nb_cell_code = \"\"\"\n",
+    "def something():\n",
+    "    pass; pass\n",
+    "#load_ext autoreload\n",
+    "#autoreload 2\n",
+    "# export\n",
+    "\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sciflow.utils import lib_path, odbc_connect, query\n",
+    "pd.set_option(\"display.max_colwidth\", 800)\n",
+    "# export\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ifp(nb_path):\n",
+    "    nb = read_nb(nb_path)\n",
+    "    nb_cell_code = '\\n'.join([c['source'].replace('%', '#') for c in nb.cells if c['cell_type'] == 'code'])\n",
+    "    stmts_in_func = 0\n",
+    "    stmts_outside_func = 0\n",
+    "    for stmt in ast.walk(ast.parse(nb_cell_code)):\n",
+    "        if isinstance(stmt, ast.FunctionDef) and not stmt.name.startswith('_'):\n",
+    "            for body_item in stmt.body:\n",
+    "                stmts_in_func += 1\n",
+    "        else:\n",
+    "            stmts_outside_func += 1\n",
+    "    return 0 if stmts_outside_func + stmts_in_func == 0 else stmts_in_func/ (stmts_outside_func + stmts_in_func)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.032679738562091505"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ifp(\"test/test_data_handling.ipynb\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.07009345794392523"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ifp(\"test/test_export.ipynb\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.03551401869158879"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ifp(\"test/test_clustering.ipynb\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Markdown to Code Ratio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cmr(nb_path):\n",
+    "    nb = read_nb(nb_path)\n",
+    "    md_cells = [c for c in nb.cells if c['cell_type'] == 'markdown']\n",
+    "    code_cells = [c for c in nb.cells if c['cell_type'] == 'code']\n",
+    "    num_code_cells = len(code_cells)\n",
+    "    num_md_cells = len(md_cells)\n",
+    "    return 0 if num_code_cells == 0 else num_md_cells/num_code_cells"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cmr(\"test/test_module.ipynb\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3157894736842105"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cmr(\"test/test_export.ipynb\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.30303030303030304"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cmr(\"test/test_clustering.ipynb\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cmr(\"test/test_module.ipynb\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. Total Code Length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tcl(nb_path):\n",
+    "    nb = read_nb(nb_path)\n",
+    "    return sum([len(c['source']) for c in nb.cells if c['cell_type'] == 'code'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "290"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tcl(\"test/test_module.ipynb\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1375"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tcl(\"test/test_export.ipynb\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1367"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tcl(\"test/test_data_handling.ipynb\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6406"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tcl(\"test/test_clustering.ipynb\")"
+   ]
   }
  ],
  "metadata": {
