--- a/nbs/utils.ipynb
+++ b/nbs/utils.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,17 +27,30 @@
     "\n",
     "import os\n",
     "from pathlib import Path\n",
+    "import ast\n",
+    "import _ast\n",
     "\n",
     "import pandas as pd\n",
     "import pyodbc\n",
-    "from nbqa.find_root import find_project_root"
+    "import nbformat\n",
+    "from nbqa.find_root import find_project_root\n",
+    "from nbdev.export import read_nb, find_default_export, get_config"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -52,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,6 +87,84 @@
     "assert Path(\"test/test_clustering.ipynb\").resolve() == lib_path(\n",
     "    \"nbs\", \"test\", \"test_clustering.ipynb\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# File"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def load_nb(nb_path):\n",
+    "    nb = read_nb(nb_path)\n",
+    "    module_name = find_default_export(nb[\"cells\"]).replace(\".\", \"/\")\n",
+    "    module_path = os.path.join(get_config().path(\"lib_path\"), f\"{module_name}.py\")\n",
+    "    return nb, module_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nb, module_path = load_nb(\"test/test_clustering.ipynb\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert type(nb) == nbformat.notebooknode.NotebookNode\n",
+    "assert os.path.exists(module_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def load_nb_module(nb_path):\n",
+    "    nb, module_path = load_nb(nb_path)\n",
+    "    with open(module_path, \"r\") as module_file:\n",
+    "        lines = module_file.readlines()\n",
+    "    module_code = '\\n'.join(lines)\n",
+    "    return nb, module_code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nb, module_code = load_nb_module(\"test/test_clustering.ipynb\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert type(nb) == nbformat.notebooknode.NotebookNode\n",
+    "assert type(ast.parse(module_code)) == _ast.Module"
    ]
   },
   {
